# synapse

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
.claude/memory/: MEMORY.md  agent_orchestration_mvp.md  cloud_backend_build.md  comparison_feature.md  native_handoff_feature.md  org_structure_feature.md  project_overview.md  tui_daemon_build.md  web_supabase_migration.md  web_ui_build.md
docs/: cloud-backend.md  integration.md  possible-features.md  tui-daemon.md  web-ui.md
docs/tasks/: command-signing.md  webui-migrate.md
proto/: daemon_link.proto
supabase/migrations/: 20260601053850_0003_user_org_helper.sql  20260601053905_0004_agents_versions_schedules_runs.sql
synapse_cloud/: __init__.py  app.py  audit.py  chain_crypto.py  command_auth.py  command_bus.py  command_bus_ws.py  comparison_pricing.py  config.py  db.py  deps.py  message_registry.py  orchestration_crypto.py  rbac.py  realtime.py  scheduler.py  security.py  storage.py
synapse_cloud/grpc_gen/: __init__.py  daemon_link_pb2.py  daemon_link_pb2.pyi  daemon_link_pb2_grpc.py
synapse_cloud/grpc_hub/: __init__.py
synapse_cloud/notifications/: __init__.py  base.py  discord.py  email.py  slack.py
synapse_cloud/routers/: __init__.py  agents.py  analytics.py  audit_export.py  auth_command_key.py  auth_device.py  capabilities.py  comparison.py  daemons.py  env_vars.py  gateways.py  handoff.py  health.py  hitl.py  identity.py  marketplace.py  memory.py  mfa_recovery.py  notifications.py  orchestration.py  recovery.py  runs.py  schedules.py  telemetry.py  webhooks.py  ws_daemon.py
synapse_cloud/services/: __init__.py  memory_sync.py  recovery.py  telemetry_ingest.py  tokens.py  versioning.py
synapse_cloud/workers/: __init__.py  anomaly.py  heartbeat_monitor.py  notify.py  rollups.py  webhooks.py
synapse_docs/: README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
synapse_docs/app/: page.tsx  (+3 more)
synapse_web/: .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
synapse_worker/: README.md  __init__.py  app.py  command_auth.py  config.py  crypto.py  errors.py  events.py  health.py  logging.py  paths.py  router.py  selfupdate.py  services.py  store.py  uplink.py  wire.py
tests/: conftest.py  live_cloud_smoke.py  test_agents.py  test_anomaly.py  test_audit.py  test_auth_device.py  test_daemons.py  test_hitl.py  test_schedules.py  test_telemetry.py  test_webhooks.py  test_ws_hub.py  ws_smoke.py
(+345 files in other folders)
