[project]
name = "synapse-cloud"
version = "0.1.0"
description = "Synapse Cloud Backend — broker/historian between the Web UI and TUI daemons"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "supabase>=2.6",
    "websockets>=12.0",
    "PyJWT>=2.8",
    "PyNaCl>=1.5",
    "arq>=0.26",
    "redis>=5.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "anyio>=4.4",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["synapse_cloud*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
